# lumynax-release

./: .gitignore  =0.27  DEPLOYMENT.md  FINALIZE.md  HPE_DEPLOYMENT.md  INTEGRATIONS.md  README.md
.github/workflows/: build-gateway-image.yml  nightly-drift-check.yml  publish-marama-route-pypi.yml  publish-pypi.yml  refresh-npm-downloads.yml  test.yml
deployments/: docker-compose.yml
deployments/2degrees/: AGENTS.md  CHECKLIST.md  README.md
deployments/gateway/: Dockerfile  app.py  requirements.txt
deployments/web-search/: settings.yml
docs/: CNAME  index.html  marama-route-npm-downloads.json
evals/: Makefile  README.md  results.md
evals/_common/: client.py  collate.py
evals/humaneval/: runner.py
evals/mmlu/: runner.py
models/lumynax-chat-hermes-3-llama31-8b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-chat-yi-15-34b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-codellama-70b-instruct-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-codeqwen15-7b-chat-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-deepseek-coder-33b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-deepseek-v2-lite-16b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-qwen25-05b-instruct-gguf/: LICENSE.txt  README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-qwen25-14b-instruct-gguf/: LICENSE.txt  README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-qwen25-15b-instruct-gguf/: LICENSE.txt  README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-qwen25-7b-instruct-gguf/: LICENSE.txt  README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-qwen25-coder-32b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-starcoder2-15b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-coder-yi-coder-9b-gguf/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-doc-donut-base/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-doc-layoutlmv3-base/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-doc-nougat-base/: README.md  UPLOAD_TO_HF.md  checksums.sha256  quickstart.py  release_export_manifest.json
models/lumynax-doc-table-transformer-detection/: README.md  (+4 more)
products/marama-route/: .gitattributes  LICENSE  MANIFEST.in  PYPI_RELEASE.md  README.md  SMOKE_TESTS.md  architecture.md  gateway_contract.md  product_blueprint.md  product_manifest.json  pyproject.toml  quickstart.py
products/marama-route/configs/: lumynax_model_registry.json
products/marama-route/examples/: request.code-restricted.json  request.multimodal-public.json
products/marama-route/lumynax_marama_route.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
products/marama-route/marama_route/: __init__.py  _ui_server.py  cli.py  compat.py  download.py  gateway.py  ops.py  platform.py  router.py  server.py  ui.py
products/marama-route/marama_route/configs/: gateway.local.json  lumynax_model_registry.json
products/marama-route/marama_route/integrations/: opencode-provider.json
products/marama-route/marama_route/schemas/: chat_route_request.schema.json
products/sovereigncode/: LICENSE  README.md  SMOKE_TESTS.md  architecture.md  product_blueprint.md  product_manifest.json  pyproject.toml  quickstart.py
products/sovereigncode/abteex_sovereigncode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
products/sovereigncode/examples/: opencode.marama-route.json  request.denied-training.json
products/sovereigncode/marama_route/: registry.py  ui.py
products/sovereigncode/marama_route/configs/: provider_aliases.yaml  routing_policy.yaml
products/sovereigncode/marama_route/examples/: request.allowed-local-edit.json
products/sovereigncode/sovereigncode/: __init__.py  audit.py  cli.py  planner.py  platform.py  policy.py  ui.py
products/sovereigncode/sovereigncode/examples/: request.personal-memory-read.json
products/sovereigncode/sovereigncode/schemas/: openai_chat_route_request.schema.json
publishing/: add_8_more_models.py  audit_24_new.py  audit_runnable.py  audit_weights.py  build_github_monorepo.py  chain_c_b_monorepo.py  finalize_new_quickstarts.py  finalize_pack_quickstarts.py  generate_cards.py  generate_cards_v6.py  list_models.py  mirror_weights.py  models.json  pack_a_ship.py  pack_b_ship.py  pack_c_ship.py  phase1_swap_internvl.py  push_all.py  push_log.txt  push_remaining.py  reconcile_registry.py  resume_d_e.py  resume_d_e_v2.py  retry_failed.py  retry_giants.py  retry_pixtral.py  sync_registry.py  verify_alts.py  verify_mirrors.py  verify_pack_a.py  verify_pack_b.py  verify_pack_b_alts.py  verify_pack_b_gguf2.py  verify_pack_c.py  verify_safety_alts.py
registry/: lumynax_model_registry.json
scripts/: e2e_smoke.sh  generate_npm_downloads_diagram.py
tools/lumynax-cli/: MODELS.md  README.md  ROUTER.md  pyproject.toml
tools/lumynax-cli/src/lumynax/: __init__.py  aliases.py  cli.py  config.py  gateway_cli.py  integrations.py  modelfile.py  progress.py  registry.py  repl.py  serve.py
tools/lumynax-cli/src/lumynax/router/: __init__.py  analyze.py  core.py  explain.py
tools/lumynax-cli/tests/: test_aliases_and_modelfile.py  test_router.py
tools/lumynax-mcp/: README.md  pyproject.toml
tools/lumynax-mcp/src/lumynax_mcp/: server.py
(+909 files in other folders)
