[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumynax-marama-route"
version = "0.3.0"
description = "LumynaX MaramaRoute: sovereign OpenAI-compatible model router for LumynaX releases."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AbteeX AI Labs" }]
keywords = ["lumynax", "marama-route", "model-router", "sovereignty", "openrouter-alternative", "openai-compatible"]

[project.urls]
Homepage = "https://lumynax.com"
Repository = "https://huggingface.co/AbteeXAILab/marama-route"
Abteex = "https://abteex.com"

[project.scripts]
marama-route = "marama_route.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marama_route*"]
namespaces = true

[tool.setuptools.package-data]
marama_route = ["configs/*", "examples/*", "integrations/*", "schemas/*"]
