[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumynax-marama-route"
version = "0.8.0"
description = "LumynaX MaramaRoute: conversational AbteeX AI Labs model CLI, downloader, and local runtime for LumynaX releases."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AbteeX AI Labs" }]
maintainers = [{ name = "AbteeX AI Labs" }]
keywords = ["lumynax", "marama-route", "model-router", "model-download", "conversational-cli", "huggingface", "sovereignty", "new-zealand", "abteex-ai-labs"]
dependencies = [
  "huggingface-hub>=0.25",
  "transformers>=4.45",
  "sentencepiece>=0.2",
  "tiktoken>=0.7",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
release = ["build>=1.2", "twine>=5.1"]
dev = ["build>=1.2", "ruff>=0.6", "twine>=5.1"]
run = ["llama-cpp-python>=0.3", "torch>=2.2"]

[project.urls]
Homepage = "https://lumynax.com"
Repository = "https://github.com/Aimaghsoodi/lumynax-release"
"Hugging Face" = "https://huggingface.co/AbteeXAILab/marama-route"
Abteex = "https://abteex.com"
Issues = "https://github.com/Aimaghsoodi/lumynax-release/issues"

[project.scripts]
marama-route = "marama_route.cli:main"
maramaroute = "marama_route.cli:main"
MaramaRoute = "marama_route.cli:main"
lumynax-route = "marama_route.cli:main"
lumynaxroute = "marama_route.cli:main"
LumynaXRoute = "marama_route.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marama_route*"]
namespaces = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
marama_route = ["py.typed", "configs/*", "examples/*", "integrations/*", "schemas/*"]
