[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abteex-sovereigncode"
version = "0.3.0"
description = "AbteeX SovereignCode: local-first coding agent with Data Capsule sovereignty controls."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AbteeX AI Labs" }]
keywords = ["lumynax", "sovereignty", "data-capsule", "coding-agent", "opencode", "new-zealand"]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://abteex.com"
Repository = "https://huggingface.co/AbteeXAILab/sovereigncode"
Lumynax = "https://lumynax.com"

[project.scripts]
sovereigncode = "sovereigncode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sovereigncode*", "marama_route*"]
namespaces = true

[tool.setuptools.package-data]
sovereigncode = ["configs/*", "examples/*", "integrations/*", "policy-packs/*", "schemas/*"]
marama_route = ["configs/*", "examples/*", "integrations/*", "schemas/*"]
