[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lumynax"
version = "0.1.0"
description = "LumynaX CLI — discover, download, and run the 100+ sovereign-AI models from AbteeX AI Labs in one command."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AbteeX AI Labs", email = "aimaghsoodi@outlook.com" }]
keywords = ["lumynax", "abteex", "sovereign-ai", "huggingface", "aotearoa", "new-zealand", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
gguf = ["llama-cpp-python>=0.3.2"]
hf = ["torch>=2.4", "transformers>=4.50", "accelerate>=1.0"]
full = ["llama-cpp-python>=0.3.2", "torch>=2.4", "transformers>=4.50", "accelerate>=1.0", "sentencepiece", "pillow"]

[project.urls]
Homepage = "https://github.com/Aimaghsoodi/lumynax-release"
"Hugging Face Org" = "https://huggingface.co/AbteeXAILab"
Source = "https://github.com/Aimaghsoodi/lumynax-release/tree/main/tools/lumynax-cli"

[project.scripts]
lumynax = "lumynax.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lumynax"]
