[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lumynax-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server exposing all 98 LumynaX models as tools to Claude Desktop, Cursor, Zed, and any other MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AbteeX AI Labs", email = "aimaghsoodi@outlook.com" }]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.5",
    "huggingface_hub>=0.27",
]

[project.scripts]
lumynax-mcp = "lumynax_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lumynax_mcp"]
